--- a/static/json/languages/es_419.json
+++ b/static/json/languages/es_419.json
@@ -73,7 +73,7 @@
     "title": "Configuración",
     "use_rainbow_as_default_wallet": "Usar Rainbow como billetera predeterminada",
     "sounds": "Sonidos",
-    "default_wallet_description": "Permitir a las aplicaciones dar prioridad a Rainbow al buscar una extensión para conectarse.",
+    "default_wallet_description": "Permitir a las apps priorizar Rainbow al buscar una extensión para conectar.",
     "contacts": "Contactos",
     "guides_and_support": "Guías y Soporte",
     "learn_about_ethereum": "Aprende sobre Ethereum",
@@ -94,7 +94,10 @@
         "text": "Arrastra las redes para reordenarlas",
         "text_bold": "Consejo:"
       },
+      "disable": "Desactivar",
       "disabled": "Deshabilitado",
+      "enable": "Activar",
+      "enabled": "Red Activada",
       "description": "Elige qué redes y tokens mostrar. Puedes conectarte a cualquier red compatible con Rainbow, incluso si no están marcados.",
       "developer_tools": {
         "title": "Habilitar Herramientas de Desarrollo",
@@ -102,6 +105,7 @@
       },
       "custom_rpc": {
         "title": "Agregar Red",
+        "add_custom_network": "Agregar Red Personalizada",
         "networks": "Redes",
         "network_name": "Nombre de la Red",
         "rpc_url": "URL RPC",
@@ -112,20 +116,23 @@
         "testnet": "Red de prueba",
         "block_explorer_url": "URL del explorador de bloques",
         "add_network": "Agregar Red",
-        "add_rpc": "Añadir RPC %{rpcName}",
+        "add_rpc": "Agregar Punto de Conexión RPC",
+        "add_network_rpc": "Agregar %{rpcName} RPC",
         "add_asset": "Agregar Token Personalizado",
-        "network_added": "¡Red Añadida!",
-        "network_added_correctly": "¡%{networkName} se ha añadido correctamente!",
+        "network_added": "Red Añadida",
+        "network_added_correctly": "%{networkName}",
         "remove_token": "Eliminar Token",
         "remove_rpc": "Eliminar RPC",
+        "remove_network": "Eliminar Red",
         "tokens": "Tokens",
-        "cant_connect": "¡No se puede conectar con este punto final RPC!",
-        "rpc_not_responding": "La URL proporcionada no responde"
+        "cant_connect": "No se puede conectar a este punto final RPC",
+        "rpc_not_responding": "El punto final RPC proporcionado no responde",
+        "rainbow_default_rpc": "Rainbow",
+        "rainbow_default": "Rainbow"
       },
       "rpc_endpoints": "Puntos de conexión RPC",
-      "enabled": "Habilitado",
       "watch_asset": {
-        "title": "Observar Activo"
+        "title": "Agregar Token Personalizado"
       }
     },
     "privacy_and_security": {
@@ -215,6 +222,20 @@
           "warning_4": "Rainbow Support nunca le pedirá su Frase de Recuperación.",
           "show": "Mostrar Frase de Recuperación",
           "copied": "Frase de Recuperación Copiada"
+        },
+        "wipe_wallets": {
+          "delete": "Restablecer Rainbow",
+          "acknowlegement": "He leído y reconozco la información anterior",
+          "warning_one": "Restablecer Rainbow reiniciará tu contraseña y eliminará todas las carteras",
+          "warning_two": "Esto también borrará todos los datos y configuraciones en Rainbow",
+          "warning_three": "Asegura que tu Frase de Recuperación Secreta esté segura antes de continuar ",
+          "warning_four": "Tus activos y fondos son accesibles con la información de recuperación correcta",
+          "button_wipe": "Restablecer Rainbow",
+          "button_complete": "Completar revisión arriba",
+          "wipe_confirmation": "Restablecer Rainbow",
+          "wipe_confirmation_desc": "¿Estás seguro de que quieres restablecer la extensión de navegador de Rainbow?",
+          "wipe_confirmation_button": "Restablecer",
+          "wipe_confirmation_cancel": "Cancelar"
         }
       }
     },
@@ -224,7 +245,10 @@
       "use_flashbots": "Usar Flashbots",
       "clear_transactions_and_nonces": "Borrar Transacciones Pendientes",
       "clear_transactions_and_nonces_success": "Transacciones pendientes borradas",
-      "flashbots_description": "Flashbots protege tus transacciones y reduce la probabilidad de fallas en las transacciones. Obtén más información."
+      "flashbots_description": "Flashbots protege tus transacciones y reduce la probabilidad de fallos."
+    },
+    "approvals": {
+      "title": "Aprobaciones"
     },
     "currency": {
       "title": "Moneda",
@@ -250,10 +274,7 @@
       "full_watching_wallets": "Acceso completo a billeteras vigiladas",
       "hw_wallets_enabled": "Habilitar soporte para billeteras de hardware",
       "command_k_internal_shortcuts_enabled": "Habilitar accesos directos internos ⌘K",
-      "custom_rpc": "RPC Personalizado",
-      "new_tab_bar_enabled": "Nueva barra de pestañas",
-      "nfts_enabled": "NFTs Habilitados",
-      "points": "Puntos"
+      "custom_rpc": "RPC Personalizado"
     }
   },
   "transactions": {
@@ -395,8 +416,10 @@
         "my_wallets": "Mis monederos",
         "my_tokens": "Mis tokens",
         "my_tokens_watched": "Tokens",
+        "my_nfts": "Mis NFTs",
+        "my_nfts_watched": "NFTs",
         "copy_address": "Copiar dirección",
-        "view_nfts": "Ver NFTs",
+        "view_profile": "Ver Perfil Rainbow",
         "add_wallet": "Agregar un monedero",
         "lock": "Bloquear Rainbow",
         "connected_apps": "Aplicaciones Conectadas",
@@ -440,7 +463,8 @@
         "swap": "puente",
         "my_wallets": "cambiar",
         "my_tokens_watched": "mis",
-        "view_nfts": "galería, perfil",
+        "my_nfts_watched": "mis",
+        "view_profile": "perfil, galería, ens, nfts",
         "testnet_mode": "alternar, redes, testnets",
         "developer_tools": "alternar, redes, desarrollador, testnets",
         "settings": "preferencias",
@@ -491,12 +515,21 @@
         "search_placeholder": "Buscar tokens…",
         "section_title": "Mis Tokens"
       },
+      "my_nfts": {
+        "empty_label": "No se encontraron NFTs",
+        "search_placeholder": "Buscar NFTs…",
+        "section_title": "Mis NFTs"
+      },
       "my_wallets": {
         "search_placeholder": "Selecciona un monedero para cambiar a…",
         "section_title": "Mis billeteras"
       },
       "token_detail": {
         "search_placeholder": "Buscar acciones de token…",
+        "section_title": "Acciones"
+      },
+      "nft_token_detail": {
+        "search_placeholder": "Buscar acciones de NFT…",
         "section_title": "Acciones"
       },
       "wallet_detail": {
@@ -531,6 +564,34 @@
     "no_connections_title": "Sin aplicaciones conectadas",
     "no_connections_copy": "Los sitios web a los que te conectes aparecerán aquí"
   },
+  "approvals": {
+    "title": "Aprobaciones",
+    "unlimited": "Ilimitado",
+    "no_allowance": "Sin Permiso",
+    "revoke_approval": "Revocar Aprobación",
+    "copy_spender": "Copiar Gastador",
+    "spender_address_copied": "Dirección de Gastador Copiada",
+    "revoked_approvals": "Aprobaciones Revocadas",
+    "nothing_found": "Nada encontrado",
+    "revoke": {
+      "title": "Revocar Aprobación",
+      "action": "Revocar",
+      "cancel": "Cancelar",
+      "allowance": "Permiso",
+      "spender": "Gastador",
+      "chain": "Cadena"
+    },
+    "token_details": {
+      "explainer": {
+        "token_approval": {
+          "title": "¿Qué es una Aprobación?",
+          "description_1": "Las aprobaciones permiten a una dApp gastar y transferir tokens o NFTs en tu nombre.",
+          "description_2": "Es importante monitorear tus aprobaciones y revocar las innecesarias, amplias o inseguras que puedan arriesgar tus activos.",
+          "action_label": "Entendido"
+        }
+      }
+    }
+  },
   "send": {
     "title": "Enviar",
     "input_to_address_placeholder": "Nombre, ENS o dirección",
@@ -558,7 +619,10 @@
       "available": "disponibles",
       "token_balance": "Saldo de tokens",
       "networks": "Redes",
-      "nothing_found": "Nada encontrado"
+      "nothing_found": "Nada encontrado",
+      "nfts": "NFTs",
+      "alphabetical": "Alfabético",
+      "recent": "Reciente"
     },
     "review": {
       "title": "Revisar y enviar",
@@ -805,7 +869,7 @@
     "title": "Tu frase de recuperación secreta",
     "write_down_seed_importance": "¡Guarda estas palabras, pueden acceder a toda tu billetera! Guárdalas en un lugar seguro y nunca las compartas.",
     "saved_these_words": "He guardado estas palabras",
-    "phrase_copied": "Frase de recuperación copiada"
+    "copied": "Frase de Recuperación Copiada"
   },
   "import_wallet_via_secret": {
     "title": "Importar billetera",
@@ -1031,7 +1095,8 @@
     "request_rejected": "Solicitud de transacción rechazada",
     "bridge_and_try_again": "Transfiere algunos fondos de gas y prueba de nuevo",
     "buy_and_try_again": "Compra algunos fondos de gas e intenta de nuevo",
-    "buy": "Compra %{token}"
+    "buy_gas": "Comprar %{token}",
+    "get_testnet_gas": "Obtener testnet gratis %{token}"
   },
   "add_chain": {
     "name": "Nombre",
@@ -1194,7 +1259,8 @@
     "exchange_rate": "Intercambio",
     "collection": "Colección",
     "token_contract": "Contrato del token",
-    "token_standard": "Estándar del token"
+    "token_standard": "Estándar del token",
+    "revoke_approval": "Revocar Aprobación"
   },
   "tokens_tab": {
     "coinbase_title": "Depósito desde Coinbase",
@@ -1209,9 +1275,7 @@
     "unknown_token": "Token desconocido"
   },
   "nfts": {
-    "coming_soon_header": "Próximamente",
     "empty_state_header": "NFTs",
-    "coming_soon_description": "Los NFTs llegarán pronto. ¡Mantente en sintonía!",
     "empty_state_description": "¡Tus tokens no fungibles aparecerán aquí!",
     "view_on_web": "Ver en Web",
     "display_mode_gallery": "Galería",
@@ -1220,8 +1284,9 @@
     "sort_option_abc": "Abc",
     "sort_option_recent_long": "Reciente",
     "sort_option_abc_long": "Alfabético",
+    "hidden_section_title": "Oculto",
     "details": {
-      "last_sales_price": "Último precio de venta",
+      "last_sales_price": "Precio de Última Venta",
       "none": "Ninguno",
       "floor_price": "Precio mínimo",
       "description": "Descripción",
@@ -1232,6 +1297,8 @@
       "token_contract": "Contrato del token",
       "contract_creator": "Creador del contrato",
       "chain": "Cadena",
+      "hide": "Ocultar",
+      "unhide": "Mostrar",
       "id_copied": "ID copiado",
       "copy_token_id": "Copiar ID del token",
       "download": "Descargar",
@@ -1251,20 +1318,24 @@
         "floor_price_description": "El precio piso de una colección es el precio de venta más bajo de todos los ítems actualmente en venta en una colección",
         "floor_price_title": "Precio piso de la colección",
         "floor_price_action_label": "Entendido"
-      }
+      },
+      "send": "Enviar",
+      "view_on_opensea": "Ver en OpenSea",
+      "view_on_explorer": "Ver en %{explorerTitle}"
     }
   },
   "points": {
-    "coming_soon_header": "Próximamente",
-    "coming_soon_description": "Los puntos están a la vuelta de la esquina.\nEmpieza a ganar hoy",
+    "check_back_soon_header": "Vuelve Pronto",
+    "check_back_soon_description": "Los puntos no están disponibles actualmente.\nVuelve pronto para seguir usando Puntos Rainbow.",
     "your_rank": "Tu rango",
+    "unranked": "Sin rango",
+    "points_to_rank": "%{rank_cutoff} puntos para clasificar",
     "next_drop": "Próxima entrega",
     "leaderboard": "Tabla de posiciones",
     "referral_code": "Código de Referido",
     "referral_code_description": "Gana puntos refiriendo amigos que intercambien $100 a través de Rainbow",
     "copied_referral_code": "¡Código de referido copiado!",
     "copied_referral_link": "¡Enlace de referido copiado!",
-    "out_of": "De un total de %{total}",
     "out_of_current_total_points": "De %{total} puntos totales actuales",
     "header": "Reclama tus puntos",
     "description": "Los puntos están aquí. Descubre cuántos has obtenido",
@@ -1301,11 +1372,31 @@
       "registration_complete": "Registro completo",
       "all_set": "¡Todo listo!",
       "keep_earning_by": "Sigue ganando puntos intercambiando, haciendo puente, acuñando, refiriendo amigos y más",
-      "the_more_you_use": "Cuanto más uses Rainbow, más serás recompensado"
+      "the_more_you_use": "Cuanto más uses Rainbow, más serás recompensado",
+      "balance_required": "Saldo de billetera requerido",
+      "ensure_you_have_a_balance_on": "Para continuar, asegúrate de tener saldo en ETH en una de las siguientes redes:",
+      "or_alternatively_balance_on": "O alternativamente, saldo en MATIC en Polygon o saldo en BNB en BSC",
+      "fund_my_wallet": "Financiar Mi Billetera"
     },
     "error": {
       "existing_user": "Usuario existente",
-      "invalid_referral_code": "Código de referido inválido"
+      "invalid_referral_code": "Código de referido inválido",
+      "unexpected": "Ocurrió algo inesperado, intenta nuevamente en unos minutos"
+    },
+    "weekly_overview": {
+      "week_of": "> Semana del %{from} - %{to}",
+      "counting": "> Contabilizando puntos ganados...",
+      "your_activity": "Tu Actividad:",
+      "referral_activity": "Actividad de Referidos:",
+      "new_referrals": "Nuevos Referidos:",
+      "retroactive": "Puntos Retroactivos:",
+      "total": "Total:",
+      "weekly_counted": "> Ganancias semanales contabilizadas",
+      "you_have": "Tienes:",
+      "none": "Ninguno",
+      "your_earnings": "Tus Ganancias La Semana Pasada",
+      "view_breakdown": "Ver el desglose de tus ganancias semanales",
+      "view_now": "Ver Ahora"
     }
   },
   "speed_up_and_cancel": {
@@ -1324,7 +1415,8 @@
     "speed_up_cta": "Acelerar transacción",
     "speed_up_transaction": "Acelerar transacción",
     "close_cta": "Cancelar",
-    "handle_copy_title": "Hash de Tx copiado"
+    "handle_copy_title": "Hash de Tx copiado",
+    "revoke_approval": "Revocar Aprobación"
   },
   "token_details": {
     "swap": "Intercambiar",
@@ -1343,6 +1435,7 @@
     "not_available": "Precio no disponible",
     "more_options": {
       "copy_address": "Copiar dirección",
+      "view_on_explorer": "Ver en %{explorer}",
       "hide": "Ocultar token",
       "report": "Informar token"
     },
@@ -1467,7 +1560,10 @@
     "network_changed": "Red de cambio",
     "network_changed_failed": "Error al cambiar de red",
     "unsupported_network": "Red no compatible",
-    "no_active_session": "No hay sesión activa"
+    "no_active_session": "No hay sesión activa",
+    "already_added": "RPC activado",
+    "set_as_active": "Nuevo RPC activado",
+    "already_active": "Red ya agregada"
   },
   "alert": {
     "ok": "Aceptar",
@@ -1535,10 +1631,6 @@
       "after": " para solicitar más información."
     }
   },
-  "approvals": {
-    "unlimited": "Ilimitado",
-    "no_allowance": "Sin Permiso"
-  },
   "buy": {
     "title": "Comprar",
     "fees_title": "Tarifas",
@@ -1602,6 +1694,7 @@
   "nonce": "Nonce",
   "copy": "Copiar",
   "copy_link": "Copiar Enlace",
+  "link_text": "Aprende más",
   "close": "Cerrar",
   "verified": "Verificado",
   "unverified": "No verificado",
