--- a/static/json/languages/id_ID.json
+++ b/static/json/languages/id_ID.json
@@ -73,7 +73,7 @@
     "title": "Pengaturan",
     "use_rainbow_as_default_wallet": "Gunakan Rainbow sebagai dompet default",
     "sounds": "Suara",
-    "default_wallet_description": "Izinkan Aplikasi untuk mengutamakan Rainbow saat mencari extension untuk terhubung",
+    "default_wallet_description": "Izinkan aplikasi memprioritaskan Rainbow saat mencari ekstensi untuk terhubung.",
     "contacts": "Kontak",
     "guides_and_support": "Panduan & Dukungan",
     "learn_about_ethereum": "Pelajari tentang Ethereum",
@@ -94,7 +94,10 @@
         "text": "Seret jaringan untuk mengaturnya",
         "text_bold": "Tip:"
       },
+      "disable": "Nonaktifkan",
       "disabled": "Nonaktif",
+      "enable": "Aktifkan",
+      "enabled": "Jaringan Diaktifkan",
       "description": "Pilih jaringan dan token yang akan ditampilkan. Anda dapat terhubung ke jaringan apa pun yang didukung Rainbow, meskipun mereka tidak dicentang",
       "developer_tools": {
         "title": "Aktifkan Alat Pengembang",
@@ -102,6 +105,7 @@
       },
       "custom_rpc": {
         "title": "Tambah Jaringan",
+        "add_custom_network": "Tambahkan Jaringan Khusus",
         "networks": "Jaringan",
         "network_name": "Nama Jaringan",
         "rpc_url": "URL RPC",
@@ -112,20 +116,23 @@
         "testnet": "Testnet",
         "block_explorer_url": "URL Eksplorer Blok",
         "add_network": "Tambah Jaringan",
-        "add_rpc": "Tambah RPC %{rpcName}",
+        "add_rpc": "Tambahkan Endpoint RPC",
+        "add_network_rpc": "Tambahkan RPC %{rpcName}",
         "add_asset": "Tambah Token Khusus",
-        "network_added": "Jaringan Ditambahkan!",
-        "network_added_correctly": "%{networkName} berhasil ditambahkan!",
+        "network_added": "Jaringan Ditambahkan",
+        "network_added_correctly": "%{networkName}",
         "remove_token": "Hapus Token",
         "remove_rpc": "Hapus RPC",
+        "remove_network": "Hapus Jaringan",
         "tokens": "Tokens",
-        "cant_connect": "Tidak dapat terhubung ke endpoint RPC ini!",
-        "rpc_not_responding": "URL yang diberikan tidak merespons"
+        "cant_connect": "Tidak bisa terhubung ke RPC endpoint ini",
+        "rpc_not_responding": "RPC endpoint yang diberikan tidak merespon",
+        "rainbow_default_rpc": "Rainbow",
+        "rainbow_default": "Rainbow"
       },
       "rpc_endpoints": "Endpoint RPC",
-      "enabled": "Diaktifkan",
       "watch_asset": {
-        "title": "Pantau Aset"
+        "title": "Tambah Token Khusus"
       }
     },
     "privacy_and_security": {
@@ -215,6 +222,20 @@
           "warning_4": "Dukungan Rainbow tidak akan pernah meminta Frasa Pemulihan Anda.",
           "show": "Tampilkan Frasa Pemulihan",
           "copied": "Frasa Pemulihan Disalin"
+        },
+        "wipe_wallets": {
+          "delete": "Reset Rainbow",
+          "acknowlegement": "Saya telah membaca dan mengakui informasi di atas",
+          "warning_one": "Merestart Rainbow akan mereset kata sandi & menghapus semua dompet",
+          "warning_two": "Ini juga akan menghapus semua data & pengaturan di Rainbow",
+          "warning_three": "Pastikan Frase Pemulihan Rahasia Anda aman sebelum melanjutkan ",
+          "warning_four": "Aset & dana Anda dapat diakses dengan informasi pemulihan yang benar",
+          "button_wipe": "Reset Rainbow",
+          "button_complete": "Lengkapi Pemeriksaan Di Atas",
+          "wipe_confirmation": "Reset Rainbow",
+          "wipe_confirmation_desc": "Apakah Anda yakin ingin mereset ekstensi browser Rainbow?",
+          "wipe_confirmation_button": "Atur Ulang",
+          "wipe_confirmation_cancel": "Batal"
         }
       }
     },
@@ -224,7 +245,10 @@
       "use_flashbots": "Gunakan Flashbots",
       "clear_transactions_and_nonces": "Hapus Transaksi Tertunda",
       "clear_transactions_and_nonces_success": "Transaksi tertunda dihapus",
-      "flashbots_description": "Flashbots melindungi transaksi Anda dan mengurangi kemungkinan kegagalan transaksi. Pelajari lebih lanjut."
+      "flashbots_description": "Flashbots melindungi transaksi Anda dan mengurangi kegagalan transaksi"
+    },
+    "approvals": {
+      "title": "Persetujuan"
     },
     "currency": {
       "title": "Mata Uang",
@@ -250,10 +274,7 @@
       "full_watching_wallets": "Akses Penuh ke Dompet Tertonton",
       "hw_wallets_enabled": "Aktifkan Dukungan Dompet Perangkat Keras",
       "command_k_internal_shortcuts_enabled": "Aktifkan Pintasan Internal ⌘K",
-      "custom_rpc": "RPC Kustom",
-      "new_tab_bar_enabled": "Bar Tab Baru",
-      "nfts_enabled": "NFTs Diaktifkan",
-      "points": "Poin"
+      "custom_rpc": "RPC Kustom"
     }
   },
   "transactions": {
@@ -395,8 +416,10 @@
         "my_wallets": "Dompet Saya",
         "my_tokens": "Token Saya",
         "my_tokens_watched": "Tokens",
+        "my_nfts": "NFT Saya",
+        "my_nfts_watched": "NFTs",
         "copy_address": "Salin Alamat",
-        "view_nfts": "Lihat NFTs",
+        "view_profile": "Lihat Profil Rainbow",
         "add_wallet": "Tambahkan Wallet",
         "lock": "Kunci Rainbow",
         "connected_apps": "Aplikasi Terhubung",
@@ -440,7 +463,8 @@
         "swap": "jembatan",
         "my_wallets": "beralih",
         "my_tokens_watched": "saya",
-        "view_nfts": "galeri, profil",
+        "my_nfts_watched": "saya",
+        "view_profile": "profil, galeri, ens, nfts",
         "testnet_mode": "tombol, jaringan, testnet",
         "developer_tools": "tombol, jaringan, pengembang, testnet",
         "settings": "preferensi",
@@ -491,12 +515,21 @@
         "search_placeholder": "Cari token…",
         "section_title": "Token Saya"
       },
+      "my_nfts": {
+        "empty_label": "NFT tidak ditemukan",
+        "search_placeholder": "Cari NFTs…",
+        "section_title": "NFT Saya"
+      },
       "my_wallets": {
         "search_placeholder": "Pilih dompet untuk beralih ke…",
         "section_title": "Dompet Saya"
       },
       "token_detail": {
         "search_placeholder": "Cari aksi token…",
+        "section_title": "Tindakan"
+      },
+      "nft_token_detail": {
+        "search_placeholder": "Cari aksi NFT…",
         "section_title": "Tindakan"
       },
       "wallet_detail": {
@@ -531,6 +564,34 @@
     "no_connections_title": "Tidak ada aplikasi terhubung",
     "no_connections_copy": "Situs web yang Anda sambungkan akan muncul di sini"
   },
+  "approvals": {
+    "title": "Persetujuan",
+    "unlimited": "Tak Terbatas",
+    "no_allowance": "Tanpa Kuota",
+    "revoke_approval": "Cabut Persetujuan",
+    "copy_spender": "Salin Pengeluar",
+    "spender_address_copied": "Alamat Pengeluar Tersalin",
+    "revoked_approvals": "Persetujuan Dicabut",
+    "nothing_found": "Tidak ada yang ditemukan",
+    "revoke": {
+      "title": "Cabut Persetujuan",
+      "action": "Cabut",
+      "cancel": "Batal",
+      "allowance": "Alokasi",
+      "spender": "Pengeluar",
+      "chain": "Rantai"
+    },
+    "token_details": {
+      "explainer": {
+        "token_approval": {
+          "title": "Apa itu Persetujuan?",
+          "description_1": "Izin memberi hak dApp untuk menghabiskan dan transfer token atau NFT atas nama Anda.",
+          "description_2": "Penting untuk memantau izin Anda dan mencabut izin yang tidak perlu, terlalu luas, atau tidak aman yang dapat membahayakan aset Anda.",
+          "action_label": "Mengerti"
+        }
+      }
+    }
+  },
   "send": {
     "title": "Kirim",
     "input_to_address_placeholder": "Nama, ENS atau alamat",
@@ -558,7 +619,10 @@
       "available": "tersedia",
       "token_balance": "Saldo Token",
       "networks": "Jaringan",
-      "nothing_found": "Tidak ada yang ditemukan"
+      "nothing_found": "Tidak ada yang ditemukan",
+      "nfts": "NFTs",
+      "alphabetical": "Abjad",
+      "recent": "Terbaru"
     },
     "review": {
       "title": "Ulasan & Kirim",
@@ -805,7 +869,7 @@
     "title": "Frasa Pemulihan Rahasia Anda",
     "write_down_seed_importance": "Simpan kata-kata ini dapat mengakses seluruh dompet Anda! Simpan di tempat yang aman jangan pernah membaginya",
     "saved_these_words": "Saya telah menyimpan kata-kata ini",
-    "phrase_copied": "Frasa Pemulihan Disalin"
+    "copied": "Frasa Pemulihan Disalin"
   },
   "import_wallet_via_secret": {
     "title": "Impor Dompet",
@@ -1031,7 +1095,8 @@
     "request_rejected": "Permintaan Transaksi Ditolak",
     "bridge_and_try_again": "Jembatani beberapa dana gas dan coba lagi",
     "buy_and_try_again": "Beli beberapa dana gas dan coba lagi",
-    "buy": "Beli %{token}"
+    "buy_gas": "Beli %{token}",
+    "get_testnet_gas": "Dapatkan testnet gratis %{token}"
   },
   "add_chain": {
     "name": "Nama",
@@ -1194,7 +1259,8 @@
     "exchange_rate": "Pertukaran",
     "collection": "Koleksi",
     "token_contract": "Kontrak Token",
-    "token_standard": "Standar Token"
+    "token_standard": "Standar Token",
+    "revoke_approval": "Cabut Persetujuan"
   },
   "tokens_tab": {
     "coinbase_title": "Deposit dari Coinbase",
@@ -1209,9 +1275,7 @@
     "unknown_token": "Token Tidak Dikenal"
   },
   "nfts": {
-    "coming_soon_header": "Segera Hadir",
     "empty_state_header": "NFTs",
-    "coming_soon_description": "NFTs segera hadir. Tetap sintonik!",
     "empty_state_description": "NFT Anda akan muncul di sini!",
     "view_on_web": "Lihat di Web",
     "display_mode_gallery": "Galeri",
@@ -1220,8 +1284,9 @@
     "sort_option_abc": "Abc",
     "sort_option_recent_long": "Terbaru",
     "sort_option_abc_long": "Abjad",
+    "hidden_section_title": "Tersembunyi",
     "details": {
-      "last_sales_price": "Harga Terakhir Terjual",
+      "last_sales_price": "Harga Jual Terakhir",
       "none": "Tidak ada",
       "floor_price": "Harga Terendah",
       "description": "Deskripsi",
@@ -1232,6 +1297,8 @@
       "token_contract": "Kontrak Token",
       "contract_creator": "Pencipta Kontrak",
       "chain": "Rantai",
+      "hide": "Sembunyikan",
+      "unhide": "Tampilkan",
       "id_copied": "ID Disalin",
       "copy_token_id": "Salin ID Token",
       "download": "Unduh",
@@ -1251,20 +1318,24 @@
         "floor_price_description": "Harga lantai koleksi adalah harga penawaran terendah dari semua item yang sedang dijual dalam sebuah koleksi.",
         "floor_price_title": "Harga Dasar Koleksi",
         "floor_price_action_label": "Mengerti"
-      }
+      },
+      "send": "Kirim",
+      "view_on_opensea": "Lihat di OpenSea",
+      "view_on_explorer": "Lihat di %{explorerTitle}"
     }
   },
   "points": {
-    "coming_soon_header": "Segera Hadir",
-    "coming_soon_description": "Poin ada di dekat sana.\nMulai mendapatkan hari ini",
+    "check_back_soon_header": "Periksa Kembali Segera",
+    "check_back_soon_description": "Poin saat ini tidak tersedia.\nSilakan cek kembali untuk menggunakan Poin Rainbow.",
     "your_rank": "Peringkat Anda",
+    "unranked": "Tidak berperingkat",
+    "points_to_rank": "%{rank_cutoff} poin untuk peringkat",
     "next_drop": "Drop Selanjutnya",
     "leaderboard": "Papan Peringkat",
     "referral_code": "Kode Referal",
     "referral_code_description": "Dapatkan poin dengan merujuk teman setelah mereka menukar $100 melalui Rainbow",
     "copied_referral_code": "Kode referal disalin!",
     "copied_referral_link": "Link referal disalin!",
-    "out_of": "Dari %{total}",
     "out_of_current_total_points": "Dari total %{total} poin saat ini",
     "header": "Klaim poin Anda",
     "description": "Poin ada di sini. Cari tahu berapa yang Anda dapat.",
@@ -1301,11 +1372,31 @@
       "registration_complete": "Pendaftaran selesai",
       "all_set": "Anda telah siap!",
       "keep_earning_by": "Terus mendapatkan poin dengan swapping, bridging, minting, merujuk teman, dan lainnya",
-      "the_more_you_use": "Semakin sering Anda menggunakan Rainbow, semakin banyak hadiah yang akan Anda dapatkan"
+      "the_more_you_use": "Semakin sering Anda menggunakan Rainbow, semakin banyak hadiah yang akan Anda dapatkan",
+      "balance_required": "Saldo dompet diperlukan",
+      "ensure_you_have_a_balance_on": "Untuk melanjutkan, pastikan Anda memiliki saldo ETH di salah satu jaringan berikut:",
+      "or_alternatively_balance_on": "Atau alternatifnya, saldo MATIC di Polygon atau saldo BNB di BSC",
+      "fund_my_wallet": "Isi Saldo Dompet"
     },
     "error": {
       "existing_user": "Pengguna lama",
-      "invalid_referral_code": "Kode referal tidak valid"
+      "invalid_referral_code": "Kode referal tidak valid",
+      "unexpected": "Terjadi kesalahan tak terduga, coba lagi dalam beberapa menit"
+    },
+    "weekly_overview": {
+      "week_of": "> Minggu %{from} - %{to}",
+      "counting": "> Menghitung poin yang didapat...",
+      "your_activity": "Aktivitas Anda:",
+      "referral_activity": "Aktivitas Referral:",
+      "new_referrals": "Referral Baru:",
+      "retroactive": "Poin Retroaktif:",
+      "total": "Total:",
+      "weekly_counted": "> Pendapatan mingguan terhitung",
+      "you_have": "Anda memiliki:",
+      "none": "Tidak ada",
+      "your_earnings": "Pendapatan Anda Minggu Lalu",
+      "view_breakdown": "Lihat rincian pendapatan mingguan Anda",
+      "view_now": "Lihat Sekarang"
     }
   },
   "speed_up_and_cancel": {
@@ -1324,7 +1415,8 @@
     "speed_up_cta": "Percepat transaksi",
     "speed_up_transaction": "Percepat transaksi",
     "close_cta": "Batal",
-    "handle_copy_title": "Tx Hash Tersalin"
+    "handle_copy_title": "Tx Hash Tersalin",
+    "revoke_approval": "Cabut Persetujuan"
   },
   "token_details": {
     "swap": "Tukar",
@@ -1343,6 +1435,7 @@
     "not_available": "Harga tidak tersedia",
     "more_options": {
       "copy_address": "Salin Alamat",
+      "view_on_explorer": "Lihat di %{explorer}",
       "hide": "Sembunyikan Token",
       "report": "Laporkan Token"
     },
@@ -1467,7 +1560,10 @@
     "network_changed": "Jaringan berubah",
     "network_changed_failed": "Gagal mengubah jaringan",
     "unsupported_network": "Jaringan tidak didukung",
-    "no_active_session": "Tidak ada sesi aktif"
+    "no_active_session": "Tidak ada sesi aktif",
+    "already_added": "RPC diaktifkan",
+    "set_as_active": "RPC baru diaktifkan",
+    "already_active": "Jaringan sudah ditambahkan"
   },
   "alert": {
     "ok": "Ok",
@@ -1535,10 +1631,6 @@
       "after": " untuk meminta lebih banyak."
     }
   },
-  "approvals": {
-    "unlimited": "Tak Terbatas",
-    "no_allowance": "Tanpa Kuota"
-  },
   "buy": {
     "title": "Beli",
     "fees_title": "Biaya",
@@ -1602,6 +1694,7 @@
   "nonce": "Nonce",
   "copy": "Salin",
   "copy_link": "Salin Tautan",
+  "link_text": "Pelajari lebih lanjut",
   "close": "Tutup",
   "verified": "Terverifikasi",
   "unverified": "Tidak Terverifikasi",
