--- a/static/json/languages/ja_JP.json
+++ b/static/json/languages/ja_JP.json
@@ -73,7 +73,7 @@
     "title": "設定",
     "use_rainbow_as_default_wallet": "Rainbowをデフォルトウォレットとして使用する",
     "sounds": "サウンド",
-    "default_wallet_description": "アプリが接続する拡張機能を探す際にRainbowを優先させることを許可する。",
+    "default_wallet_description": "拡張機能を探す際にRainbowを優先させる",
     "contacts": "連絡先",
     "guides_and_support": "ガイドとサポート",
     "learn_about_ethereum": "Ethereumについて学ぶ",
@@ -94,7 +94,10 @@
         "text": "ネットワークをドラッグして並べ替え",
         "text_bold": "ヒント："
       },
+      "disable": "無効化",
       "disabled": "無効",
+      "enable": "有効化",
+      "enabled": "ネットワークが有効",
       "description": "表示するネットワークとトークンを選択します。チェックがない場合でも、Rainbowがサポートする任意のネットワークに接続できます",
       "developer_tools": {
         "title": "デベロッパーツールを有効にする",
@@ -102,6 +105,7 @@
       },
       "custom_rpc": {
         "title": "ネットワーク追加",
+        "add_custom_network": "カスタムネットワークを追加",
         "networks": "ネットワーク",
         "network_name": "ネットワーク名",
         "rpc_url": "RPC URL",
@@ -112,20 +116,23 @@
         "testnet": "テストネット",
         "block_explorer_url": "ブロックエクスプローラーURL",
         "add_network": "ネットワーク追加",
-        "add_rpc": "RPCを追加 %{rpcName}",
+        "add_rpc": "RPCエンドポイントを追加",
+        "add_network_rpc": "%{rpcName} RPCを追加",
         "add_asset": "カスタムトークンを追加",
-        "network_added": "ネットワークを追加しました！",
-        "network_added_correctly": "%{networkName} は正しく追加されました！",
+        "network_added": "ネットワークを追加しました",
+        "network_added_correctly": "%{networkName}",
         "remove_token": "トークンを削除",
         "remove_rpc": "RPCを削除",
+        "remove_network": "ネットワークを削除",
         "tokens": "トークン",
-        "cant_connect": "このRPCエンドポイントに接続できません！",
-        "rpc_not_responding": "指定されたURLが応答しません"
+        "cant_connect": "このRPCエンドポイントに接続できません",
+        "rpc_not_responding": "指定されたRPCエンドポイントが応答していません",
+        "rainbow_default_rpc": "Rainbow",
+        "rainbow_default": "Rainbow"
       },
       "rpc_endpoints": "RPCエンドポイント",
-      "enabled": "有効",
       "watch_asset": {
-        "title": "アセットを監視"
+        "title": "カスタムトークンを追加"
       }
     },
     "privacy_and_security": {
@@ -215,6 +222,20 @@
           "warning_4": "Rainbowサポートは、あなたのリカバリーフレーズを求めることはありません。",
           "show": "リカバリーフレーズを表示する",
           "copied": "リカバリーフレーズがコピーされました"
+        },
+        "wipe_wallets": {
+          "delete": "Rainbowをリセット",
+          "acknowlegement": "上記の情報を読み、認識しました",
+          "warning_one": "Rainbowをリセットすると、パスワードがリセットされ、すべてのウォレットが削除されます",
+          "warning_two": "これにより、Rainbow内のすべてのデータと設定が消去されます",
+          "warning_three": "進む前にシークレットリカバリーフレーズが安全であることを確認してください ",
+          "warning_four": "資産と資金は正しいリカバリー情報があればアクセス可能です",
+          "button_wipe": "Rainbowをリセット",
+          "button_complete": "上記のチェックを完了",
+          "wipe_confirmation": "Rainbowをリセット",
+          "wipe_confirmation_desc": "Rainbowブラウザ拡張をリセットしてもよろしいですか？",
+          "wipe_confirmation_button": "リセット",
+          "wipe_confirmation_cancel": "キャンセル"
         }
       }
     },
@@ -224,7 +245,10 @@
       "use_flashbots": "Flashbots の使用",
       "clear_transactions_and_nonces": "保留中のトランザクションをクリア",
       "clear_transactions_and_nonces_success": "保留中のトランザクションがクリアされました",
-      "flashbots_description": "Flashbots はトランザクションの保護およびトランザクションの失敗の可能性を減らします。詳細をご覧ください。"
+      "flashbots_description": "Flashbotsはトランザクションを守り、失敗の可能性を減らします"
+    },
+    "approvals": {
+      "title": "承認"
     },
     "currency": {
       "title": "通貨",
@@ -250,10 +274,7 @@
       "full_watching_wallets": "ウォレットの監視機能を完全に有効にする",
       "hw_wallets_enabled": "ハードウェアウォレットサポートを有効にする",
       "command_k_internal_shortcuts_enabled": "⌘K の内部ショートカットを有効にする",
-      "custom_rpc": "カスタムRPC",
-      "new_tab_bar_enabled": "新しいタブバー",
-      "nfts_enabled": "NFT有効",
-      "points": "ポイント"
+      "custom_rpc": "カスタムRPC"
     }
   },
   "transactions": {
@@ -395,8 +416,10 @@
         "my_wallets": "マイウォレット",
         "my_tokens": "マイトークン",
         "my_tokens_watched": "トークン",
+        "my_nfts": "私のNFT",
+        "my_nfts_watched": "NFTs",
         "copy_address": "アドレスをコピー",
-        "view_nfts": "NFTを表示",
+        "view_profile": "Rainbowプロフィールを見る",
         "add_wallet": "ウォレットを追加",
         "lock": "Rainbowをロックする",
         "connected_apps": "接続されたアプリ",
@@ -440,7 +463,8 @@
         "swap": "ブリッジ",
         "my_wallets": "切り替え",
         "my_tokens_watched": "マイ",
-        "view_nfts": "ギャラリー、プロフィール",
+        "my_nfts_watched": "マイ",
+        "view_profile": "プロフィール, ギャラリー, ENS, NFT",
         "testnet_mode": "切り替え、ネットワーク、テストネット",
         "developer_tools": "切り替え、ネットワーク、開発者、テストネット",
         "settings": "設定",
@@ -491,12 +515,21 @@
         "search_placeholder": "トークンを検索…",
         "section_title": "マイトークン"
       },
+      "my_nfts": {
+        "empty_label": "NFTが見つかりません",
+        "search_placeholder": "NFTを検索…",
+        "section_title": "私のNFT"
+      },
       "my_wallets": {
         "search_placeholder": "切り替えるウォレットを選択…",
         "section_title": "マイウォレット"
       },
       "token_detail": {
         "search_placeholder": "トークンアクションを検索する…",
+        "section_title": "アクション"
+      },
+      "nft_token_detail": {
+        "search_placeholder": "NFTアクションを検索…",
         "section_title": "アクション"
       },
       "wallet_detail": {
@@ -531,6 +564,34 @@
     "no_connections_title": "接続されたアプリはありません",
     "no_connections_copy": "ここに接続したウェブサイトが表示されます"
   },
+  "approvals": {
+    "title": "承認",
+    "unlimited": "無制限",
+    "no_allowance": "許可がありません",
+    "revoke_approval": "承認を取り消す",
+    "copy_spender": "支払い先をコピー",
+    "spender_address_copied": "支払い先アドレスをコピーしました",
+    "revoked_approvals": "取り消された承認",
+    "nothing_found": "見つかりませんでした",
+    "revoke": {
+      "title": "承認を取り消す",
+      "action": "取り消す",
+      "cancel": "キャンセル",
+      "allowance": "許可",
+      "spender": "支払い先",
+      "chain": "チェーン"
+    },
+    "token_details": {
+      "explainer": {
+        "token_approval": {
+          "title": "承認とは何ですか？",
+          "description_1": "承認はdAppが代わりにトークンやNFTを使用・転送することを許可します",
+          "description_2": "承認を監視し、資産にリスクを及ぼす不要または不適切な承認は取り消すことが重要です",
+          "action_label": "了解"
+        }
+      }
+    }
+  },
   "send": {
     "title": "送信",
     "input_to_address_placeholder": "名前、ENSまたはアドレス",
@@ -558,7 +619,10 @@
       "available": "利用可能",
       "token_balance": "トークン残高",
       "networks": "ネットワーク",
-      "nothing_found": "見つかりませんでした"
+      "nothing_found": "見つかりませんでした",
+      "nfts": "NFTs",
+      "alphabetical": "アルファベット順",
+      "recent": "最近"
     },
     "review": {
       "title": "確認して送信",
@@ -805,7 +869,7 @@
     "title": "あなたの秘密の回復フレーズ",
     "write_down_seed_importance": "これらの単語を保管すると、あなたのウォレット全体にアクセスできます！安全な場所に保管し、他の人と共有しないようにしてください。",
     "saved_these_words": "これらの単語を保存しました",
-    "phrase_copied": "回復フレーズがコピーされました"
+    "copied": "リカバリーフレーズがコピーされました"
   },
   "import_wallet_via_secret": {
     "title": "ウォレットをインポートする",
@@ -1031,7 +1095,8 @@
     "request_rejected": "トランザクションリクエストが拒否されました",
     "bridge_and_try_again": "ガス資金をブリッジして再試行",
     "buy_and_try_again": "ガス資金を購入して再試行",
-    "buy": "購入 %{token}"
+    "buy_gas": "%{token}を購入",
+    "get_testnet_gas": "無料のテストネット %{token}を入手"
   },
   "add_chain": {
     "name": "名前",
@@ -1194,7 +1259,8 @@
     "exchange_rate": "交換",
     "collection": "コレクション",
     "token_contract": "トークン契約",
-    "token_standard": "トークン標準"
+    "token_standard": "トークン標準",
+    "revoke_approval": "承認を取り消す"
   },
   "tokens_tab": {
     "coinbase_title": "Coinbaseから入金",
@@ -1209,9 +1275,7 @@
     "unknown_token": "不明なトークン"
   },
   "nfts": {
-    "coming_soon_header": "近日公開",
     "empty_state_header": "NFTs",
-    "coming_soon_description": "NFTsは近日公開。お楽しみに！",
     "empty_state_description": "あなたのNFTがここに表示されます！",
     "view_on_web": "ウェブで見る",
     "display_mode_gallery": "ギャラリー",
@@ -1220,8 +1284,9 @@
     "sort_option_abc": "Abc",
     "sort_option_recent_long": "最近",
     "sort_option_abc_long": "アルファベット順",
+    "hidden_section_title": "非表示",
     "details": {
-      "last_sales_price": "最終取引価格",
+      "last_sales_price": "最後の販売価格",
       "none": "なし",
       "floor_price": "底値",
       "description": "説明",
@@ -1232,6 +1297,8 @@
       "token_contract": "トークン契約",
       "contract_creator": "契約作成者",
       "chain": "チェーン",
+      "hide": "非表示",
+      "unhide": "非表示解除",
       "id_copied": "IDをコピーしました",
       "copy_token_id": "トークンIDをコピー",
       "download": "ダウンロード",
@@ -1251,20 +1318,24 @@
         "floor_price_description": "コレクションの床価格は、現在販売中のアイテムの中で最も低い希望価格を指します。",
         "floor_price_title": "コレクションの床価格",
         "floor_price_action_label": "了解"
-      }
+      },
+      "send": "送信する",
+      "view_on_opensea": "OpenSeaで見る",
+      "view_on_explorer": "%{explorerTitle}で見る"
     }
   },
   "points": {
-    "coming_soon_header": "近日公開",
-    "coming_soon_description": "ポイントはすぐ近くにあります。\n今日から獲得を始めましょう。",
+    "check_back_soon_header": "もうすぐチェック",
+    "check_back_soon_description": "現在ポイントは利用できません。\n後ほど確認して、Rainbowポイントを再利用してください。",
     "your_rank": "ランク",
+    "unranked": "未ランク",
+    "points_to_rank": "%{rank_cutoff} ポイントでランク入り",
     "next_drop": "次のドロップ",
     "leaderboard": "リーダーボード",
     "referral_code": "紹介コード",
     "referral_code_description": "友達を紹介してRainbowで$100をスワップするとポイントが獲得できます",
     "copied_referral_code": "紹介コードをコピーしました！",
     "copied_referral_link": "紹介リンクをコピーしました！",
-    "out_of": "%{total}点満点中",
     "out_of_current_total_points": "現在の合計点中 %{total} 点満点",
     "header": "ポイントを請求する",
     "description": "ポイントがここにあります。何ポイント獲得したか確認してください。",
@@ -1301,11 +1372,31 @@
       "registration_complete": "登録完了",
       "all_set": "準備ができました！",
       "keep_earning_by": "スワップ、ブリッジング、ミンティング、友達紹介などをすることでポイントを獲得し続けることができます",
-      "the_more_you_use": "Rainbowを使えば使うほど報酬が増えます"
+      "the_more_you_use": "Rainbowを使えば使うほど報酬が増えます",
+      "balance_required": "ウォレットの残高が必要です",
+      "ensure_you_have_a_balance_on": "続行するには、以下のネットワークのいずれかにETH残高があることを確認してください：",
+      "or_alternatively_balance_on": "または、Polygon上のMATIC残高、またはBSC上のBNB残高がある場合",
+      "fund_my_wallet": "マイウォレットに資金を入れる"
     },
     "error": {
       "existing_user": "既存のユーザー",
-      "invalid_referral_code": "紹介コードが無効です"
+      "invalid_referral_code": "紹介コードが無効です",
+      "unexpected": "予期せぬエラーが発生しました。数分後に再試行してください"
+    },
+    "weekly_overview": {
+      "week_of": "> %{from} 週 - %{to}",
+      "counting": "> 獲得ポイント計算中...",
+      "your_activity": "あなたのアクティビティ:",
+      "referral_activity": "紹介アクティビティ:",
+      "new_referrals": "新規紹介者:",
+      "retroactive": "遡及ポイント:",
+      "total": "合計:",
+      "weekly_counted": "週間収益が計上されました",
+      "you_have": "あなたの保有:",
+      "none": "なし",
+      "your_earnings": "先週のあなたの収益",
+      "view_breakdown": "週間収益の内訳を見る",
+      "view_now": "今すぐ見る"
     }
   },
   "speed_up_and_cancel": {
@@ -1324,7 +1415,8 @@
     "speed_up_cta": "トランザクションの処理速度を上げる",
     "speed_up_transaction": "トランザクションの処理速度を上げる",
     "close_cta": "キャンセル",
-    "handle_copy_title": "Txハッシュがコピーされました"
+    "handle_copy_title": "Txハッシュがコピーされました",
+    "revoke_approval": "承認を取り消す"
   },
   "token_details": {
     "swap": "スワップ",
@@ -1343,6 +1435,7 @@
     "not_available": "価格は利用できません",
     "more_options": {
       "copy_address": "アドレスをコピー",
+      "view_on_explorer": "表示 %{explorer}で",
       "hide": "トークンを非表示にする",
       "report": "トークンを報告する"
     },
@@ -1467,7 +1560,10 @@
     "network_changed": "ネットワークが変更されました",
     "network_changed_failed": "ネットワークの変更に失敗しました",
     "unsupported_network": "サポートされていないネットワークです",
-    "no_active_session": "アクティブなセッションがありません"
+    "no_active_session": "アクティブなセッションがありません",
+    "already_added": "RPCを有効にしました",
+    "set_as_active": "新しいRPCを有効にしました",
+    "already_active": "ネットワークは既に追加されています"
   },
   "alert": {
     "ok": "OK",
@@ -1535,10 +1631,6 @@
       "after": " を要求するために。"
     }
   },
-  "approvals": {
-    "unlimited": "無制限",
-    "no_allowance": "許可がありません"
-  },
   "buy": {
     "title": "購入",
     "fees_title": "手数料",
@@ -1602,6 +1694,7 @@
   "nonce": "ノンス",
   "copy": "コピー",
   "copy_link": "リンクをコピー",
+  "link_text": "詳しくはこちら",
   "close": "閉じる",
   "verified": "確認済み",
   "unverified": "未確認",
